--- a/charts/adsb/values.yaml
+++ b/charts/adsb/values.yaml
@@ -19,9 +19,8 @@ app-template:
             repository: ghcr.io/sdr-enthusiasts/docker-adsb-ultrafeeder
             tag: latest
             pullPolicy: Always
-        # podOptions: ????
-          # nodeSelector:
-          #   nesdr.feature.node.kubernetes.io/rtlamr: "true"
+          nodeSelector:
+            nesdr.feature.node.kubernetes.io/adsb1090: "true"
 
     dump978:
       type: statefulset
@@ -40,9 +39,8 @@ app-template:
             repository: ghcr.io/sdr-enthusiasts/docker-dump978
             tag: latest
             pullPolicy: Always
-        # podOptions: ????
-          # nodeSelector:
-          #   nesdr.feature.node.kubernetes.io/rtlamr: "true"
+          nodeSelector:
+            nesdr.feature.node.kubernetes.io/adsb978: "true"
 
     # planewatch:
     #   type: statefulset
