--- a/charts/generic-device-plugin/values.yaml
+++ b/charts/generic-device-plugin/values.yaml
@@ -27,6 +27,24 @@ app-template:
                       - path: /dev/serial/by-id/usb-0658_0200-if00
               - --device
               - |
+                name: adsb1090
+                count: 1
+                groups:
+                  - usb:
+                    - vendor: 0bda
+                      product: 2838
+                      serial: 978
+              - --device
+              - |
+                name: adsb1090
+                count: 1
+                groups:
+                  - usb:
+                    - vendor: 0bda
+                      product: 2838
+                      serial: 978
+              - --device
+              - |
                 name: rtlsdr
                 count: 1
                 groups:
