--- a/charts/adsb/values.yaml
+++ b/charts/adsb/values.yaml
@@ -22,6 +22,8 @@ app-template:
           resources:
             requests:
                squat.ai/adsb1090: '1'
+            limit:
+               squat.ai/adsb1090: '1'
 
     dump978:
       type: statefulset
@@ -42,6 +44,8 @@ app-template:
             pullPolicy: Always
           resources:
             requests:
+               squat.ai/adsb978: '1'
+            limit:
                squat.ai/adsb978: '1'
 
     # planewatch:
