--- a/charts/adsb/values.yaml
+++ b/charts/adsb/values.yaml
@@ -25,7 +25,7 @@ app-template:
             limits:
                squat.ai/adsb1090: '1'
 
-    dump978:
+    dump978-ppm:
       type: statefulset
       strategy: RollingUpdate
       annotations:
@@ -39,17 +39,49 @@ app-template:
           securityContext:
             privileged: true
           image:
-            repository: ghcr.io/sdr-enthusiasts/docker-dump978
+            repository: ghcr.io/sdr-enthusiasts/docker-readsb-protobuf
             tag: latest
             pullPolicy: Always
+            command:
+            - /scripts/estimate_rtlsdr_ppm.sh
+            args:
+              - --device
+              - /dev/bus/usb 
           env:
             UAT_SDR_SERIAL: '978'
+            UAT_SDR_GAIN: 'autogain'
             TZ: America/New_York
           resources:
             requests:
                squat.ai/adsb978: '1'
             limits:
                squat.ai/adsb978: '1'
+    # dump978:
+    #   type: statefulset
+    #   strategy: RollingUpdate
+    #   annotations:
+    #     reloader.stakater.com/auto: "true"
+    #   labels:
+    #     kasten/backup: "true"
+    #     app: adsb
+    #     version: 1.0.0
+    #   containers:
+    #     dump978:
+    #       securityContext:
+    #         privileged: true
+    #       image:
+    #         repository: ghcr.io/sdr-enthusiasts/docker-dump978
+    #         tag: latest
+    #         pullPolicy: Always
+    #       env:
+    #         UAT_SDR_SERIAL: '978'
+    #         UAT_SDR_GAIN: 'autogain'
+    #         TZ: America/New_York
+    #       resources:
+    #         requests:
+    #            squat.ai/adsb978: '1'
+    #         limits:
+    #            squat.ai/adsb978: '1'
 
     # planewatch:
     #   type: statefulset
