--- a/charts/adsb/values.yaml
+++ b/charts/adsb/values.yaml
@@ -53,6 +53,7 @@ app-template:
             privileged: true
             runAsUser: 0
             runAsGroup: 0
+            privileged: true
           image:
             repository: ghcr.io/sdr-enthusiasts/docker-dump978
             tag: latest
