--- a/charts/adsb/templates/scc.yaml
+++ b/charts/adsb/templates/scc.yaml
@@ -3,6 +3,10 @@ kind: SecurityContextConstraints
 apiVersion: security.openshift.io/v1
 metadata:
   name: adsb-scc
+requiredDropCapabilities:
+- KILL
+- MKNOD
+- SYS_CHROOT
 allowPrivilegedContainer: true
 allowHostDirVolumePlugin: true
 fsGroup:
