--- a/charts/adsb/templates/scc.yaml
+++ b/charts/adsb/templates/scc.yaml
@@ -3,6 +3,10 @@ kind: SecurityContextConstraints
 apiVersion: security.openshift.io/v1
 metadata:
   name: adsb-scc
+allowedCapabilities:
+- NET_BIND_SERVICE
+defaultAddCapabilities:
+- NET_BIND_SERVICE
 requiredDropCapabilities:
 - KILL
 - MKNOD
