--- a/charts/adsb/values.yaml
+++ b/charts/adsb/values.yaml
@@ -55,7 +55,7 @@ app-template:
             runAsGroup: 0
           image:
             repository: ghcr.io/ullbergm/docker-dump978
-            tag: latest
+            tag: 1
             pullPolicy: Always
           env:
             TZ: America/New_York
