--- a/charts/adsb/values.yaml
+++ b/charts/adsb/values.yaml
@@ -2,41 +2,86 @@ app-template:
   securityContext:
     privileged: true
   controllers:
-    # ultrafeeder:
-    #   type: statefulset
-    #   strategy: RollingUpdate
-    #   annotations:
-    #     reloader.stakater.com/auto: "true"
-    #   labels:
-    #     kasten/backup: "true"
-    #     app: adsb
-    #     version: 1.0.0
-    #   containers:
-    #     ultrafeeder:
-    #       securityContext:
-    #         privileged: true
-    #       image:
-    #         repository: ghcr.io/sdr-enthusiasts/docker-adsb-ultrafeeder
-    #         tag: latest
-    #         pullPolicy: Always
-    #       env:
-    #         LOGLEVEL: error
-    #         TZ: America/New_York
-    #         READSB_DEVICE_TYPE: rtlsdr
-    #         READSB_RTLSDR_DEVICE: '1090'
-    #         READSB_RTLSDR_PPM: '10'
-    #         READSB_LAT: '35'
-    #         READSB_LON: '70'
-    #         READSB_ALT: 42m
-    #         READSB_GAIN: 'autogain'
-    #         READSB_RX_LOCATION_ACCURACY: '2'
-    #         READSB_STATS_RANGE: 'true'
-    #       resources:
-    #         requests:
-    #            squat.ai/adsb1090: '1'
-    #         limits:
-    #            squat.ai/adsb1090: '1'
-
+    ultrafeeder:
+      type: statefulset
+      strategy: RollingUpdate
+      annotations:
+        reloader.stakater.com/auto: "true"
+      labels:
+        kasten/backup: "true"
+        app: adsb
+        version: 1.0.0
+      containers:
+        ultrafeeder:
+          securityContext:
+            privileged: true
+          image:
+            repository: ghcr.io/sdr-enthusiasts/docker-adsb-ultrafeeder
+            tag: latest
+            pullPolicy: Always
+          env:
+            LOGLEVEL: error
+            TZ: America/New_York
+            HTTP_PORT: '8080'
+            READSB_DEVICE_TYPE: rtlsdr
+            READSB_RTLSDR_DEVICE: '1090'
+            READSB_RTLSDR_PPM: '39'
+            READSB_LAT: '35'
+            READSB_LON: '70'
+            READSB_ALT: 42m
+            READSB_GAIN: 'autogain'
+            READSB_RX_LOCATION_ACCURACY: '2'
+            READSB_STATS_RANGE: 'true'
+            ULTRAFEEDER_CONFIG: |
+              adsb,dump978,30978,uat_in;
+            # adsb,feed.adsb.fi,30004,beast_reduce_plus_out;
+            # adsb,in.adsb.lol,30004,beast_reduce_plus_out;
+            # adsb,feed.airplanes.live,30004,beast_reduce_plus_out;
+            # adsb,feed.planespotters.net,30004,beast_reduce_plus_out;
+            # adsb,feed.theairtraffic.com,30004,beast_reduce_plus_out;
+            # adsb,data.avdelphi.com,24999,beast_reduce_plus_out;
+            # adsb,skyfeed.hpradar.com,30004,beast_reduce_plus_out;
+            # adsb,feed.radarplane.com,30001,beast_reduce_plus_out;
+            # adsb,dati.flyitalyadsb.com,4905,beast_reduce_plus_out;
+            # adsb,feed1.adsbexchange.com,30004,beast_reduce_plus_out;
+            # mlat,feed.adsb.fi,31090,39000;
+            # mlat,in.adsb.lol,31090,39001;
+            # mlat,feed.airplanes.live,31090,39002;
+            # mlat,mlat.planespotters.net,31090,39003;
+            # mlat,feed.theairtraffic.com,31090,39004;
+            # mlat,skyfeed.hpradar.com,31090,39005;
+            # mlat,feed.radarplane.com,31090,39006;
+            # mlat,dati.flyitalyadsb.com,30100,39007;
+            # mlat,feed.adsbexchange.com,31090,39008;
+            # mlathub,piaware,30105,beast_in;
+            # mlathub,rbfeeder,30105,beast_in;
+            # mlathub,radarvirtuel,30105,beast_in;
+            # mlathub,planewatch,30105,beast_in;
+            UUID: 'ULTRAFEEDER_UUID'
+            MLAT_USER: 'FEEDER_NAME'
+            READSB_FORWARD_MLAT_SBS: 'true'
+            UPDATE_TAR1090: 'true'
+            TAR1090_DEFAULTCENTERLAT: '35'
+            TAR1090_DEFAULTCENTERLON: '70'
+            TAR1090_MESSAGERATEINTITLE: 'true'
+            TAR1090_PAGETITLE: 'FEEDER_NAME'
+            TAR1090_PLANECOUNTINTITLE: 'true'
+            TAR1090_ENABLE_AC_DB: 'true'
+            TAR1090_FLIGHTAWARELINKS: 'true'
+            HEYWHATSTHAT_PANORAMA_ID: 'FEEDER_HEYWHATSTHAT_ID'
+            HEYWHATSTHAT_ALTS: 'FEEDER_HEYWHATSTHAT_ALTS'
+            TAR1090_SITESHOW: 'true'
+            TAR1090_RANGE_OUTLINE_COLORED_BY_ALTITUDE: 'true'
+            TAR1090_RANGE_OUTLINE_WIDTH: '2.0'
+            TAR1090_RANGERINGSDISTANCES: '50,100,150,200'
+            TAR1090_RANGERINGSCOLORS: "'#1A237E','#0D47A1','#42A5F5','#64B5F6'"
+            TAR1090_USEROUTEAPI: 'true'
+            GRAPHS1090_DARKMODE: 'true'
+          resources:
+            requests:
+               squat.ai/adsb1090: '1'
+            limits:
+               squat.ai/adsb1090: '1'
     dump978:
       type: statefulset
       strategy: RollingUpdate
