--- a/charts/adsb/values.yaml
+++ b/charts/adsb/values.yaml
@@ -136,7 +136,7 @@ app-template:
             tag: v0.0.4
             pullPolicy: Always
           env:
-            BEASTHOST: 'ultrafeeder'
+            BEASTHOST: 'adsb-beast-output'
             LAT: '35'
             LONG: '70'
             ALT: '38m'
