--- a/charts/adsb/values.yaml
+++ b/charts/adsb/values.yaml
@@ -164,27 +164,32 @@ app-template:
           env:
             BEASTHOST: 'adsb-ultrafeeder-beast-output'
             FEEDER_ID: 'FEEDER_ID'
+            TZ: America/New_York
             UAT_RECEIVER_TYPE: 'relay'
             UAT_RECEIVER_HOST: 'adsb-dump978-raw-output'
 
-    # flightradar24:
-    #   type: statefulset
-    #   strategy: RollingUpdate
-    #   annotations:
-    #     reloader.stakater.com/auto: "true"
-    #   labels:
-    #     kasten/backup: "true"
-    #     app: adsb
-    #     version: 1.0.0
-    #   containers:
-    #     flightradar24:
-    #       securityContext:
-    #         privileged: true
-    #       image:
-    #         # renovate: docker-image versioning=loose
-    #         repository: ghcr.io/sdr-enthusiasts/docker-flightradar24
-    #         tag: 1.0.48-0
-    #         pullPolicy: Always
+    flightradar24:
+      type: statefulset
+      strategy: RollingUpdate
+      annotations:
+        reloader.stakater.com/auto: "true"
+      labels:
+        kasten/backup: "true"
+        app: adsb
+        version: 1.0.0
+      containers:
+        flightradar24:
+          securityContext:
+            privileged: true
+          image:
+            # renovate: docker-image versioning=loose
+            repository: ghcr.io/sdr-enthusiasts/docker-flightradar24
+            tag: 1.0.48-0
+            pullPolicy: Always
+          env:
+            BEASTHOST: 'adsb-ultrafeeder-beast-output'
+            FR24KEY: 'FR24KEY'
+            TZ: America/New_York
 
     # radarbox:
     #   type: statefulset
