--- a/charts/adsb/values.yaml
+++ b/charts/adsb/values.yaml
@@ -36,7 +36,7 @@ app-template:
               adsb,adsb-dump978-raw-output,30978,uat_in;
               mlathub,adsb-flightaware-mlat-beast-output,30105,beast_in;
               mlathub,adsb-planewatch-mlat-beast-output,30105,beast_in;
-              mlathub,adsb-rbfeeder-mlat-beast-output,30105,beast_in;
+              mlathub,adsb-radarbox-mlat-beast-output,30105,beast_in;
             # adsb,feed.adsb.fi,30004,beast_reduce_plus_out;
             # adsb,in.adsb.lol,30004,beast_reduce_plus_out;
             # adsb,feed.airplanes.live,30004,beast_reduce_plus_out;
@@ -406,8 +406,8 @@ app-template:
         mlat-beast-output:
           port: 31005
 
-    rbfeeder-mlat-beast-output:
-      controller: rbfeeder
+    radarbox-mlat-beast-output:
+      controller: radarbox
       ports:
         mlat-beast-output:
           port: 31005
