--- a/charts/adsb/values.yaml
+++ b/charts/adsb/values.yaml
@@ -406,8 +406,8 @@ app-template:
         mlat-beast-output:
           port: 31005
 
-    radarbox-mlat-beast-output:
-      controller: radarbox
-      ports:
-        mlat-beast-output:
-          port: 31005
+    # radarbox-mlat-beast-output:
+    #   controller: radarbox
+    #   ports:
+    #     mlat-beast-output:
+    #       port: 31005
