--- a/charts/adsb/values.yaml
+++ b/charts/adsb/values.yaml
@@ -210,7 +210,8 @@ app-template:
             tag: 1.06
             pullPolicy: Always
           env:
-            SBSHOST: 'adsb-ultrafeeder-sbs-input'
+            SBSHOST: 'adsb-ultrafeeder-raw-output'
+            SBSPORT: '30002'
             CLIENTKEY: 'CLIENTKEY'
             TZ: America/New_York
 
