--- a/charts/adsb/values.yaml
+++ b/charts/adsb/values.yaml
@@ -36,9 +36,13 @@ app-template:
               adsb,adsb-dump978-raw-output,30978,uat_in;
               mlathub,adsb-flightaware-mlat-beast-output,30105,beast_in;
               mlathub,adsb-planewatch-mlat-beast-output,30105,beast_in;
+              adsb,feed1.adsbexchange.com,30004,beast_reduce_plus_out;
+              mlat,feed.adsbexchange.com,31090,39008;
+              adsb,in.adsb.lol,30004,beast_reduce_plus_out;
+              mlat,in.adsb.lol,31090,39001;
+              adsb,feed.adsb.fi,30004,beast_reduce_plus_out;
+              mlat,feed.adsb.fi,31090,39000;
             # mlathub,adsb-radarbox-mlat-beast-output,30105,beast_in;
-            # adsb,feed.adsb.fi,30004,beast_reduce_plus_out;
-            # adsb,in.adsb.lol,30004,beast_reduce_plus_out;
             # adsb,feed.airplanes.live,30004,beast_reduce_plus_out;
             # adsb,feed.planespotters.net,30004,beast_reduce_plus_out;
             # adsb,feed.theairtraffic.com,30004,beast_reduce_plus_out;
@@ -46,16 +50,12 @@ app-template:
             # adsb,skyfeed.hpradar.com,30004,beast_reduce_plus_out;
             # adsb,feed.radarplane.com,30001,beast_reduce_plus_out;
             # adsb,dati.flyitalyadsb.com,4905,beast_reduce_plus_out;
-            # adsb,feed1.adsbexchange.com,30004,beast_reduce_plus_out;
-            # mlat,feed.adsb.fi,31090,39000;
-            # mlat,in.adsb.lol,31090,39001;
             # mlat,feed.airplanes.live,31090,39002;
             # mlat,mlat.planespotters.net,31090,39003;
             # mlat,feed.theairtraffic.com,31090,39004;
             # mlat,skyfeed.hpradar.com,31090,39005;
             # mlat,feed.radarplane.com,31090,39006;
             # mlat,dati.flyitalyadsb.com,30100,39007;
-            # mlat,feed.adsbexchange.com,31090,39008;
             # mlathub,radarvirtuel,30105,beast_in;
             UUID: 'ULTRAFEEDER_UUID'
             MLAT_USER: 'FEEDER_NAME'
